@@ -617,6 +617,11 @@ Release 1.2.0 - unreleased
     HADOOP-9502. chmod/chown do not return error exit codes for some exceptions.
     (szetszwo)
 
+    MAPREDUCE-5158. Cleanup job-submission related files on HDFS during
+    JobTracker restart for jobs which set mapreduce.job.restart.recover to
+    false to indicate they don't want to be recovered. (Mayank Bansal via
+    acmurthy) 
+
 Release 1.1.2 - 2013.01.30
 
   INCOMPATIBLE CHANGES
